# code_WindowsAPI

./: README.md
src/: CMakeLists.txt  update.bat
src/ConsoleHide/src/: main.cpp
src/CountErr/src/: main.cpp
src/CreateMutex/src/: main.cpp
src/CreateProcess/src/: main.cpp
src/CreateThread/: CMakeLists.txt
src/CreateThread/src/: main.cpp
src/CreateToolhelp32Snapshot/src/: main.cpp
src/CreateToolhelp32SnapshotToModule/src/: main.cpp
src/CreateToolhelp32SnapshotToProcess/src/: main.cpp
src/DBG_TOOL_CALL_RET/src/: main.cpp
src/DBG_TOOL_TEST/src/: main.cpp
src/DLLMain/: CMakeLists.txt
src/DLLMain/src/: main.cpp
src/EventErr/src/: main.cpp
src/ExitProcess/src/: main.cpp
src/ExitThread/src/: main.cpp
src/FindWindow/: CMakeLists.txt
src/FindWindow/src/: main.cpp
src/GetWindowThreadProcess/src/: main.cpp
src/HelloWindows/: CMakeLists.txt
src/HelloWindows/src/: main.cpp
src/LoadLibrary/doc/: cpp_name_rules.txt
src/LoadLibrary/src/: main.cpp
src/LoadLibraryTest/: CMakeLists.txt
src/LoadLibraryTest/include/: ClassLib.h  ClassLib_Global.h
src/LoadLibraryTest/src/: ClassLib.cpp  DLLMain.cpp  test.cpp
src/MemChange/src/: main.cpp
src/MemChange_Testor/src/: main.cpp
src/MessageBox/src/: main.cpp
src/ReadProcessMemory/src/: main.cpp
src/ReadProcessMemory_basepointer/src/: main.cpp
src/SetThreadPriority/src/: main.cpp
src/TerminateProcess/src/: main.cpp
src/TerminateThread/: CMakeLists.txt
src/TerminateThread/src/: main.cpp
src/WindowsA2W/: CMakeLists.txt
src/WindowsA2W/src/: main.cpp
src/WindowsButtonMFC/: CMakeLists.txt
src/WindowsButtonMFC/src/: main.cpp
src/WindowsCommon/include/: resource.h
src/WindowsCommon/src/: WindowsCommon.rc  main.cpp  resource.h
src/WindowsContorlDemo/: CMakeLists.txt
src/WindowsContorlDemo/include/: resource.h
src/WindowsContorlDemo/src/: WindowsContorlDemo.rc  main.cpp
src/WindowsDemo/src/: main.cpp
src/WindowsDlg/: CMakeLists.txt
src/WindowsDlg/include/: resource.h
src/WindowsDlg/src/: WindowsDlg.rc  main.cpp
src/WindowsEncrypt/: CMakeLists.txt
src/WindowsEncrypt/src/: main.cpp
src/WindowsMFCDemo/src/: main.cpp
src/WindowsMemPicture/: CMakeLists.txt
src/WindowsMemPicture/include/: ReadBMP.h
src/WindowsMemPicture/src/: ReadBMP.cpp  ReadBMP.rc  resource.h
src/WindowsMemoryInfo/include/: MemoryInfo.h
src/WindowsMemoryInfo/src/: MemoryInfo.cpp
src/WindowsPrintDir/doc/: PrintDir.txt  WindowsCode.txt
src/WindowsPrintDir/src/: main.cpp
src/WindowsSSP_GUI/src/: main.cpp
src/WindowsSSP_Test/: CMakeLists.txt
src/WindowsSSP_Test/src/: main.cpp
src/WindowsServiceFramwork/: CMakeLists.txt
src/WindowsServiceFramwork/include/: ModernWindowsService.h  PrivilegeManager.hpp
src/WindowsServiceFramwork/src/: ModernWindowsService.cpp  (+1 more)
src/WindowsTestService/: CMakeLists.txt
src/assembly/: CMakeLists.txt
src/assert/: installService.bat  middle.txt
src/cmake/: CommonTools.cmake
(+12 files in other folders)
